# io-region

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  changelog.md  io-region.cabal
.github/workflows/: build.yml
lib/Control/IO/: Region.hs
lib/Control/IO/Region/: Internal.hs
misc/imask/: Makefile  README  example1.hs  example2.hs  example3.hs  example4.hs  example5.hs  example6.hs
portable_hspec/Test/: Hspec.hs
test/: test.hs
