name:                io-region
version:             0.0.1
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Yuras Shumovich
maintainer:          shumovichy@gmail.com
-- copyright:           
category:            Control
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Control.IO.Region
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base,
                       stm
  hs-source-dirs:      lib
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base,
                       hspec,
                       transformers,
                       io-region
  default-language:    Haskell2010
