name:                io-region
version:             0.1.1
synopsis:            Exception safe resource management with dynamic regions
license:             BSD3
license-file:        LICENSE
author:              Yuras Shumovich
maintainer:          shumovichy@gmail.com
copyright:           Copyright (c) Yuras Shumovich 2015
homepage:            https://github.com/Yuras/io-region/wiki
category:            Control
build-type:          Simple
cabal-version:       >=1.10
description:
  Region owns resources and automatically frees them on exit.
  It is a plain old ADT, so it is possible to pass it to functions,
  put into mutable references, store in regular data types.
  .
  Resources can be freed earler or transfered to other regions.
  .
  Region itself can be used as any other resource. E.g. one region
  can own other one.
  .
  The library doesn't pretend to solve double throw issue.
extra-source-files:  changelog.md

source-repository head
  type:                git
  location:            git@github.com/Yuras/io-region.git

library
  exposed-modules:     Control.IO.Region
  build-depends:       base >= 4.5 && < 5.0,
                       stm
  hs-source-dirs:      lib
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base,
                       hspec,
                       transformers,
                       io-region
  default-language:    Haskell2010
